@@ -7,6 +7,9 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2019-01-16] mpz_spowm: added check for correct base in fast exponentiation
+* [2019-01-16] mpz_sqrtm: remove unused parameter in tmcg_mpz_qrmn_p()
+* [2019-01-16] configure.ac: added compiler option "-Wextra"
 * [2019-01-05] mpz_sprime: added tmcg_mpz_smprime() with increased B = 80000
 * [2018-12-23] RFC4880: changed type of tmcg_openpgp_mem_alloc to unsigned long
 * [2018-12-02] release 1.3.16 of LibTMCG
